--- a/web/bread_map2/bread_map/package.json
+++ b/web/bread_map2/bread_map/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "d3-scale": "^4.0.2",
     "d3-scale-chromatic": "^3.1.0",
+    "handlebars": "^4.7.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-globe.gl": "^2.34.0",
