--- a/web/bread_map2/bread_map/package.json
+++ b/web/bread_map2/bread_map/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "d3-scale": "^4.0.2",
     "d3-scale-chromatic": "^3.1.0",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
     "handlebars": "^4.7.8",
+    "pg": "^8.16.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-globe.gl": "^2.34.0",
